react elements and componenets

--- a/index.html
+++ b/index.html
@@ -13,17 +13,9 @@
     </div>
     
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-<script>
-const headding = React.createElement('h1',{id:'head'},'hello')
-const headding2 = React.createElement('h2',{id:'head2'},'haii')
-const div = React.createElement('div',{id:'div'},[headding,headding2])
-const root = ReactDOM.createRoot(document.getElementById('root'))
-
-root.render(div)
-</script>
-
+<script type="module"  src="App.js"></script>
 </body>
 </html>
